[metadata]
name = cmflow
author = Angus Yeh
author-email = a.yeh@auckland.ac.nz
summary = Building TOUGH2/Waiwera models from layers of conceptual models
license = LGPLv3
description-file =
    README.md
home-page = http://pypi.python.org/pypi/cmflow
requires-python = >=2.7
classifier = 
    Programming Language :: Python :: 2
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[files]
packages =
    cmflow